--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,13 +88,12 @@
   <% end %>
 </section>
 <main>
-
-
   <%= yield %>
 </main>
 
-<footer>
-  <%= "\u00A9" %> 2018 MAGS Ltd. All Rights Reserved
+<footer class="footer">
+  <p>Customer Care  |  Privacy Policy  |  Terms of Service</p>
+  <p><%= "\u00A9" %> 2018 MAGS Ltd. All Rights Reserved</p>
 </footer>
 </body>
 </html>
